# kirana-ops-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  SECURITY.md  compose.yaml  pyproject.toml  render.yaml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  ASSIGNMENT.md  DEPLOYMENT.md  GST_AND_DEMO_DATA.md  HOW_IT_WORKS.md  RECORDING_GUIDE.md  TEST_MATRIX.md
src/kirana_agent/: __init__.py  config.py  db.py  demo.py  main.py  schema.sql  seed.py  telegram_bot.py
src/kirana_agent/agent/: __init__.py  prompt.py  runtime.py  tools.py
src/kirana_agent/artifacts/: __init__.py  deck.py  invoice.py
src/kirana_agent/data/: products.json  tax_rules.json
src/kirana_agent/domain/: __init__.py  errors.py  money.py  service.py  units.py
tests/: conftest.py  test_agent_contract.py  test_artifact_records.py  test_config.py  test_inventory_billing.py  test_invoice_artifact.py  test_khata_preferences_analytics.py  test_logging_security.py  test_money_units.py  test_recording_scenario.py  test_sales_deck_artifact.py  test_seed_catalog.py  test_telegram_access.py  test_telegram_rendering.py  test_telegram_updates.py
